--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         function startGame() {
 			var spanResult = document.getElementById("result");
 			spanResult.style.color = "black";
-			spanResult.innerHTML = ""; // Змінено innerHtml на innerHTML
-			draw(); // Виправлено "dra()" на "draw()"
+			spanResult.innerHTML = "";
+			draw();
 		}
 		
 		// Рисуем все элементы и запускаем игру
